--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta property="og:title" content="Tienda adidas">
 <meta property="og:url" content="http://adidas.com/">
 <meta property="og:Description" content="Tienda Adidas en Santa Cruz">
-<meta property="og:image" content="/og-adidas-image.png">
+<meta property="og:image" content="https://github.com/Christianterrazasl/TiendaWeb/blob/main/og-adidas-image.png">
 </head>
 <body>
 
