imagen funcional en body

--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 <meta name="theme-color" content="#006229">
 
 <meta property="og:title" content="Tienda adidas">
-<meta property="og:url" content="http://adidas.com/">
+<meta property="og:url" content="https://christianterrazasl.github.io/TiendaWeb">
 <meta property="og:Description" content="Tienda Adidas en Santa Cruz">
-<meta property="og:image" content="https://christianterrazasl.github.io/TiendaWeb/og-adidas-image.png">
+<meta property="og:image" content="https://github.com/Christianterrazasl/TiendaWeb/og-adidas-image.png">
 </head>
 <body>
 
 <h1>
     Titulo de prueba
 </h1>
-
+<img src="https://github.com/Christianterrazasl/TiendaWeb/main/og-adidas-image.png" alt="logo adidas">
 
 </body>
 </html>
