Commit de chill

--- a/index.html
+++ b/index.html
@@ -1,24 +1,37 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>
-    Adidas 
-</title>
-<meta name="Author" content="Christian Terrazas">
-<meta name="Description" content="Pagina de prueba para adidas">
-<meta name="theme-color" content="#006229">
-
-<meta property="og:title" content="Tienda adidas">
-<meta property="og:url" content="https://christianterrazasl.github.io/TiendaWeb">
-<meta property="og:Description" content="Tienda Adidas en Santa Cruz">
-<meta property="og:image" content="og-adidas-image.png">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Titan Ironworks</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="header-lines">
+        
+        <div class="lineaArriba">
+            <h2>INICIAR SESION</h2>
+            <h2>REGISTRARSE</h2>
+        </div>
 
-<h1>
-    Titulo de prueba
-</h1>
-<img src="og-adidas-image.png" alt="logo adidas">
+        <img src="imagenes/logo.png" alt="logo de la empresa">
 
+        <div class="lineaAbajo">
+            <h2>CATALOGO</h2>
+            <h2>GIMNASIOS</h2>
+            <h2>QUIENES SOMOS</h2>
+            <h2>CONTACTO</h2>
+        </div>
+        
+    </div>
+    <div class="portada">
+        <div class="imagenes-portada">
+            <img src="imagenes/portada2.webp" alt="portada de la pagina, persona usando mancuernas">
+            <div class="filtro-oscuro"></div>
+        </div>
+    </div>
 </body>
 </html>
