--- a/index.html
+++ b/index.html
@@ -28,9 +28,12 @@
         
     </div>
     <div class="portada">
-        <div class="imagenes-portada">
-            <img src="imagenes/portada2.webp" alt="portada de la pagina, persona usando mancuernas">
-            <div class="filtro-oscuro"></div>
+        <div class="fondoOscuro"></div>
+        <div class="contenido">
+            <h1 class="tituloPrincipal">TITAN <br>Ironworks</h1>
+            <h2 class="tituloSecundario">EQUIPAMIENTO PARA CAMPEONES</h2>
+            <p>Proveemos equipos de entrenamiento a los mejores gimnasios de Santa Cruz</p>
+            <input type="button" value="¡Hace tu pedido!">
         </div>
     </div>
 </body>
