--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Titan Ironworks index</title>
-    <link rel="stylesheet" href="indexStyle.css">
+    <link rel="stylesheet" href="/index/indexStyle.css">
     <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet"> -->
@@ -17,16 +17,16 @@
             <h2 class="lineaArribaTitulo" id="registrarse">REGISTRARSE</h2>
         </div>
         <div class="imgContainer">
-            <img src="../imagenes/logo.png" alt="logo de la empresa" class="lineaArriba-logoPortada">
+            <img src="imagenes/logo.png" alt="logo de la empresa" class="lineaArriba-logoPortada">
         </div>
 
         <div class="lineaAbajo">
             <h2 class="lineaAbajoTitulo" id="switchMenu">&#x2193</h2>
-            <h2 class="lineaAbajoTitulo esconder" id="catalogo"><a href="../catalogo/catalogo.html">CATALOGO</a></h2>
+            <h2 class="lineaAbajoTitulo esconder" id="catalogo"><a href="/catalogo/catalogo.html">CATALOGO</a></h2>
             <h2 class="lineaAbajoTitulo esconder">GIMNASIOS</h2>
             <h2 class="lineaAbajoTitulo esconder">QUIENES SOMOS</h2>
             <h2 class="lineaAbajoTitulo esconder"><a href="#panelContacto">CONTACTO</a></h2>
-            <img src="../imagenes/logoCarritoDeCompra.png" alt="carrito de compra" class="logoCarritoBanner">
+            <img src="/imagenes/logoCarritoDeCompra.png" alt="carrito de compra" class="logoCarritoBanner">
         </div>
         
     </div>
@@ -37,24 +37,24 @@
             
             <h2 class="tituloSecundarioBanner">EQUIPAMIENTO<br> PARA <br>CAMPEONES</h2>
             <p class="parrafoBanner">Proveemos equipos<br> de entrenamiento<br> a los mejores gimnasios<br> de Santa Cruz</p>
-            <input type="button" value="¡Hace tu pedido!" class="botonBanner" onclick="window.location.href='../catalogo/catalogo.html';">
+            <input type="button" value="¡Hace tu pedido!" class="botonBanner" onclick="window.location.href='/catalogo/catalogo.html';">
         </div>
     </div>
     <section class="productosPopulares">
         <h1 class="tituloPopulares">PRODUCTOS POPULARES</h1>
         <figure class="carrucelPopulares">
             <div class="itemCarrucel">
-                <img src="../imagenes/squatRack1.png" alt="squat rack">
+                <img src="/imagenes/squatRack1.png" alt="squat rack">
                 <h2>Squat rack - 500Bs.</h2>
                 <input type="button" class="btnComprarCarrucel" value="Comprar">
             </div>
-            <div class="itemCarrucel"><img src="../imagenes/latPulldown1.png" alt="lat machine">
+            <div class="itemCarrucel"><img src="/imagenes/latPulldown1.png" alt="lat machine">
                 <h2>Lat Pulldown - 500Bs.</h2>
                 <input type="button" class="btnComprarCarrucel" value="Comprar"></div>
-            <div class="itemCarrucel"><img src="../imagenes/dumbells1.png" alt="mancuernas">
+            <div class="itemCarrucel"><img src="/imagenes/dumbells1.png" alt="mancuernas">
                 <h2>Mancuernas - 500Bs.</h2>
                 <input type="button" class="btnComprarCarrucel" value="Comprar"></div>
-            <div class="itemCarrucel"><img src="../imagenes/rackDiscos.png" alt="rack de discos">
+            <div class="itemCarrucel"><img src="/imagenes/rackDiscos.png" alt="rack de discos">
                 <h2>Rack de pesas - 500Bs.</h2>
                 <input type="button" class="btnComprarCarrucel" value="Comprar"></div>
 
@@ -73,6 +73,6 @@
         </form> 
     </section>
 
-    <script src="scriptIndex.js"></script>
+    <script src="index/scriptIndex.js"></script>
 </body>
 </html>
