--- a/catalogo.html
+++ b/catalogo.html
@@ -14,8 +14,8 @@
             <h2 class="lineaArribaTitulo" id="registrarse">REGISTRARSE</h2>
         </div>
         <div class="imgContainer">
-            <a href="../index/index.html">
-            <img src="../imagenes/logo.png" alt="logo de la empresa" class="lineaArriba-logoPortada">
+            <a href="index.html">
+            <img src="/logo.png" alt="logo de la empresa" class="lineaArriba-logoPortada">
             </a>
         </div>
     </section>
@@ -23,25 +23,25 @@
         <h1 class="tituloCatalogo">CATALOGO</h1>
         <div class="itemsContainer">
             <article class="itemCatalogo">
-                <img src="../imagenes/dumbells1.png" alt="mancuernas">
+                <img src="/dumbells1.png" alt="mancuernas">
                 <h2 class="tituloItem">Mancuernas peso 5-30Kg. - 100Bs</h2>
-                <input type="button" value="Ver detalles" class="btnDetalles" onclick="window.location.href='../mancuerna/mancuerna.html';">
+                <input type="button" value="Ver detalles" class="btnDetalles" onclick="window.location.href='mancuerna.html';">
                 <input type="button" value="Comprar" class="btnComprar">
             </article>
             <article class="itemCatalogo">
-                <img src="../imagenes/benchPress1.png" alt="banca de Press">
+                <img src="/benchPress1.png" alt="banca de Press">
                 <h2 class="tituloItem">Banca para pecho -500Bs.</h2>
                 <input type="button" value="Ver detalles" class="btnDetalles">
                 <input type="button" value="Comprar" class="btnComprar">
             </article>
             <article class="itemCatalogo">
-                <img src="../imagenes/latPulldown1.png" alt="maquina de polea">
+                <img src="/latPulldown1.png" alt="maquina de polea">
                 <h2 class="tituloItem">Maquina remo vertical - 600Bs.</h2>
                 <input type="button" value="Ver detalles" class="btnDetalles" onclick="">
                 <input type="button" value="Comprar" class="btnComprar">
             </article>
             <article class="itemCatalogo">
-                <img src="../imagenes/rackDiscos.png" alt="rack para discos">
+                <img src="/rackDiscos.png" alt="rack para discos">
                 <h2 class="tituloItem">Rack para discos - 150Bs.</h2>
                 <input type="button" value="Ver detalles" class="btnDetalles">
                 <input type="button" value="Comprar" class="btnComprar">
