--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <div class="lineaAbajo">
             <h2 class="lineaAbajoTitulo" id="switchMenu">&#x2193</h2>
-            <h2 class="lineaAbajoTitulo esconder" id="catalogo"><a href="catalogo.html">CATALOGO</a></h2>
+            <h2 class="lineaAbajoTitulo esconder" id="catalogo"><a href="https://christianterrazasl.github.io/TiendaWeb/catalogo.html">CATALOGO</a></h2>
             <h2 class="lineaAbajoTitulo esconder">GIMNASIOS</h2>
             <h2 class="lineaAbajoTitulo esconder">QUIENES SOMOS</h2>
             <h2 class="lineaAbajoTitulo esconder"><a href="#panelContacto">CONTACTO</a></h2>
