arreglando links y mejorando frontend

--- a/mancuerna/mancuerna.html
+++ b/mancuerna/mancuerna.html
@@ -14,14 +14,14 @@
             <h2 class="lineaArribaTitulo" id="registrarse">REGISTRARSE</h2>
         </div>
         <div class="imgContainer">
-            <a href="/index.html">
-            <img src="/logo.png" alt="logo de la empresa" class="lineaArriba-logoPortada">
+            <a href="../index.html">
+            <img src="../imagenes/logo.png" alt="logo de la empresa" class="lineaArriba-logoPortada">
             </a>
         </div>
     </section>
     <section class="producto">
         <h1 class="tituloProducto">Mancuernas de pesos variados</h1>
-        <img src="/dumbells1.png" alt="mancuernas" class="imagenProducto">
+        <img src="../imagenes/dumbells1.png" alt="mancuernas" class="imagenProducto">
         <p class="descrProducto">Mancuernas con pesos variados de excelente calidad reforzadas con goma exterior</p>
         <h2 class="tituloEspecificaciones"> Escpecificaciones</h2>
         <ul class="listaEsp">
