--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
 </head>
 <body>
     <div class="header-lines">
@@ -65,6 +66,9 @@
         <input type="button" class="btnCarrucel" id="btnNext" value="&#10095">
         <input type="button" class="btnCarrucel" id="btnPrev" value="&#10094">
     </section>
+    <section class="influencers">
+        
+    </section>
     <section class="contacto" id="panelContacto">
         <form>
             <h2 class="tituloContacto">CONTACTANOS</h2>
@@ -74,6 +78,29 @@
             <input type="button" value="Enviar" class="btnEnviarContacto">
 
         </form> 
+    </section>
+    <section class="referencias">
+        <div class="sucursales">
+            <h1 class="tituloReferencias">SUCURSALES</h1>
+            <div class="sucursal">
+                <i class="fa-solid fa-location-dot"></i><p>Av. Moscú 5to anillo</p>
+            </div>
+            <div class="sucursal">
+                <i class="fa-solid fa-location-dot"></i><p>Av. Busch 4to anillo</p>
+            </div>
+            <div class="sucursal">
+                <i class="fa-solid fa-location-dot"></i><p>Av. Beni 3er anillo</p>
+            </div>
+        </div>
+        <div class="redesSociales">
+            <h1 class="tituloReferencias">REDES SOCIALES</h1>
+            <div class="redSocial">
+                <i class="fa-brands fa-instagram"></i><p>@TitanIronworks</p>
+            </div>
+            <div class="redSocial">
+                <i class="fa-brands fa-facebook"></i><p>TitanIW</p>
+            </div>
+        </div>
     </section>
 
     <script src="index/scriptIndex.js"></script>
