--- a/public/index.html
+++ b/public/index.html
@@ -4,45 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Titan Ironworks index</title>
+    <link rel="stylesheet" href="css/headerLines.css">
+    <link rel="stylesheet" href="css/contacto.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
 </head>
 <body>
-    <div class="header-lines">
-        <div class="lineaArriba">
-            <h2 id="mensajeUserInSession" class="lineaArribaTitulo"></h2>
-            <input type="button" class="lineaArribaTitulo" id="btnCerrarSesion" value="Cerrar Sesion" onclick="cerrarSesion()">
-            <h2 class="lineaArribaTitulo" id="iniciarSesion">INICIAR SESION</h2>
-            <h2 class="lineaArribaTitulo" id="registrarse">REGISTRARSE</h2>
+    <div id="headerLines">
+        <div id="upperHeaderLine">
+            <h2 id="msgUserInSession" class="headerLineTitle"></h2>
             
+            <h2 class="headerLineTitle" id="btnLogin">INICIAR SESION</h2>
+            <h2 class="headerLineTitle" id="btnRegister">REGISTRARSE</h2>
+            <input type="button" class="headerLineTitle" id="btnLogout" value="Cerrar Sesion" onclick="cerrarSesion()">
         </div>
-        <div class="imgContainer">
-            <img src="imagenes/logo.png" alt="logo de la empresa" class="lineaArriba-logoPortada">
-        </div>
-
-        <div class="lineaAbajo">
-            <h2 class="lineaAbajoTitulo" id="catalogo">CATALOGO</h2>
-            <h2 class="lineaAbajoTitulo">GIMNASIOS</h2>
-            <h2 class="lineaAbajoTitulo">QUIENES SOMOS</h2>
-            <h2 class="lineaAbajoTitulo">CONTACTO</h2>
-            <h2 class="lineaAbajoTitulo" id="listaOrdenes">MIS ORDENES</h2>
-            <img src="imagenes/logoCarritoDeCompra.png" alt="carrito de compra" class="logoCarritoBanner" onclick="document.location.href='carrito.html'">
+        <div id="bottomHeaderLine">
+            <h2 class="headerLineTitle" id="catalog">CATALOGO</h2>
+            <h2 class="headerLineTitle">GIMNASIOS</h2>
+            <h2 class="headerLineTitle">QUIENES SOMOS</h2>
+            <h2 class="headerLineTitle">CONTACTO</h2>
+            <h2 class="headerLineTitle" id="btnOrders">MIS ORDENES</h2>
+            <img src="imagenes/logoCarritoDeCompra.png" alt="carrito de compra" id="imgCarrito" onclick="document.location.href='carrito.html'">
         </div>
         
     </div>
-    <div class="banner">
-        <div class="fondoOscuroBanner"></div>
-        <h1 class="tituloPrincipalBanner">TITAN IRONWORKS</h1>
-        <h2 class="tituloSecundarioBanner">EQUIPAMIENTO PARA CAMPEONES</h2>
-        <p class="parrafoBanner">Proveemos equipos de entrenamiento a los mejores gimnasios de Santa Cruz</p>
-        <input type="button" value="¡Hace tu pedido!" class="botonBanner" onclick="window.location.href='catalogo.html';">
+    <div id="banner">
+        <!--<img src="imagenes/portada2.webp" alt="portada" id="imgBanner">-->
+        <div id="bannerFilter"></div>
+        <h1 id="bannerTitle">TITAN <br>IRONWORKS</h1>
+        <h2 id="bannerTitle2">EQUIPAMIENTO <br>PARA <br>CAMPEONES</h2>
+        <p id="bannerP">Proveemos equipos <br>de entrenamiento<br> a los mejores <br>gimnasios de Santa Cruz</p>
+        <input type="button" value="¡Hace tu pedido!" id="btnBanner" class="btnGreen" onclick="window.location.href='catalogo.html';">
     </div>
     <section id="quienesSomos">
-        <h2 class="quienesSomosTitle">¿QUIENES SOMOS?</h2>
-        <div class="quienesSomosParrafos">
+        <h2 id="quienesSomosTitle">¿QUIENES SOMOS?</h2>
+        <div id="quienesSomosParrafos">
             <p class="quienesSomosParrafo">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim debitis odit eligendi natus nulla. 
                 Minus voluptas quam vero unde distinctio qui voluptatem ipsa facilis earum, aperiam at error vitae sapiente.</p>
             <p class="quienesSomosParrafo">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim debitis odit eligendi natus nulla. 
